1. Training.JavaScript.cproj file fix

--- a/Source/Training.JavaScript.csproj
+++ b/Source/Training.JavaScript.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="1. Functional Programmingming\index.html" />
-    <Content Include="1. Functional Programmingming\script1.js" />
+    <Content Include="1. Functional Programmingming\script.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
