--- a/Source/Training.JavaScript.csproj
+++ b/Source/Training.JavaScript.csproj
@@ -58,7 +58,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="1. Functional Programmingming\index.html" />
+    <Content Include="1. Functional Programmingming\js\10_Lazy.js" />
+    <Content Include="1. Functional Programmingming\js\11_Memorization.js" />
+    <Content Include="1. Functional Programmingming\js\1_PartialApplication.js" />
+    <Content Include="1. Functional Programmingming\js\2_Currying.js" />
+    <Content Include="1. Functional Programmingming\js\3_LinearFold.js" />
+    <Content Include="1. Functional Programmingming\js\4_LinearUnfold.js" />
+    <Content Include="1. Functional Programmingming\js\5_Map.js" />
+    <Content Include="1. Functional Programmingming\js\6_Filter.js" />
+    <Content Include="1. Functional Programmingming\js\7_Average.js" />
+    <Content Include="1. Functional Programmingming\js\8_Sum.js" />
+    <Content Include="1. Functional Programmingming\js\9_First.js" />
     <Content Include="1. Functional Programmingming\script.js" />
+    <Content Include="1. Functional Programmingming\css\style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
