--- a/Source/Logger/Logger.csproj
+++ b/Source/Logger/Logger.csproj
@@ -59,12 +59,12 @@
   <ItemGroup>
     <Content Include="index.html" />
     <Content Include="js\logger\alertWriter.js" />
-    <Content Include="js\logger\app.js" />
+    <Content Include="js\logger\logger.js" />
     <Content Include="js\logger\baseWriter.js" />
     <Content Include="js\logger\consoleWriter.js" />
     <Content Include="js\logger\windowWriter.js" />
     <Content Include="js\require.js" />
-    <Content Include="js\utils.js" />
+    <Content Include="js\logger\utils.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
