--- a/Source/Logger/Logger.csproj
+++ b/Source/Logger/Logger.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="js\app.js" />
     <Content Include="js\logger\alertWriter.js" />
     <Content Include="js\logger\logger.js" />
     <Content Include="js\logger\baseWriter.js" />
